--- a/view/customer.html
+++ b/view/customer.html
@@ -2,5 +2,10 @@
 	<div ng-model="hello">
 		{{hello}}
 	</div>
-
+   		<div>
+			<h4>Inserting the list </h4>
+			<input type="text" ng-model="title" plceholder="Enter Titile">
+			<input type="text" ng-model="description" plceholder="Enter Description">
+			<input type="button" value="postdata" ng-click="post()">
+		</div>
 </div>
